alterei a cor  do hover do botao

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --botao-azul: #164BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'inter';
-    --botao-azul-efeito: #3c92fa;
+    --botao-azul-efeito: #fa3c55;
 }
 
 body {
